--- a/style.css
+++ b/style.css
@@ -3,20 +3,28 @@
     padding: 0;
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
-    color: #ccc;
+    color: #fdfdfd;
 }
 
 body {
-    background-color: #8cc260
+    background-color: #3EA433;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%233EA433' width='11' height='11'/%3E%3Crect fill='%2340a535' x='10' width='11' height='11'/%3E%3Crect fill='%2342a736' y='10' width='11' height='11'/%3E%3Crect fill='%2343a838' x='20' width='11' height='11'/%3E%3Crect fill='%2345aa39' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%2347ab3b' y='20' width='11' height='11'/%3E%3Crect fill='%2349ad3d' x='30' width='11' height='11'/%3E%3Crect fill='%234aae3e' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%234cb040' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%234eb141' y='30' width='11' height='11'/%3E%3Crect fill='%2350b343' x='40' width='11' height='11'/%3E%3Crect fill='%2351b445' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%2353b646' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%2355b748' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%2356b949' y='40' width='11' height='11'/%3E%3Crect fill='%2358bb4b' x='50' width='11' height='11'/%3E%3Crect fill='%235abc4d' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%235bbe4e' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%235dbf50' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%235fc151' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%2360c253' y='50' width='11' height='11'/%3E%3Crect fill='%2362c454' x='60' width='11' height='11'/%3E%3Crect fill='%2364c556' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%2365c758' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%2367c859' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%2369ca5b' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%236acb5c' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%236ccd5e' x='70' width='11' height='11'/%3E%3Crect fill='%236ece5f' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%236fd061' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%2371d163' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%2372d364' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%2374d566' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%2376d667' x='80' width='11' height='11'/%3E%3Crect fill='%2377d869' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%2379d96a' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%237bdb6c' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%237cdc6e' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%237ede6f' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%237fdf71' x='90' width='11' height='11'/%3E%3Crect fill='%2381e172' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%2383e374' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%2384e476' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%2386e677' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%2388e779' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%2389e97a' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%238bea7c' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%238cec7e' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%238eee7f' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%2390ef81' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%2391f182' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%2393f284' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%2395f486' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%2396f587' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%2398f789' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%2399f98b' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%239bfa8c' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%239dfc8e' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%239efd8f' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23A0FF91' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .container {
     margin: 0px auto;
     padding: 40px 50px;
     width: 800px;
-    background: #7eaf57;
+    background: #458f3252;
     border-right: 2px solid #ccc;
     border-left: 2px solid #ccc;
+}
+
+article {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 h1 {
@@ -30,16 +38,28 @@ h2 {
     font-size: 24px;
 }
 
-.categories {
-    margin: 10px 0;
+.card {
+    margin: 0 auto;
 }
 
 .card-categories {
-    margin-top: 10px;
+    margin-top: 15px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: auto;
 }
+
+@media (max-width: 720px) {
+    .card-categories {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 380px) {
+    .card-categories {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
 
 .card-content {
     border: 2px solid #ccc;
@@ -52,7 +72,7 @@ h2 {
 }
 
 .card-content:hover{
-    background-color: #8ac45b;
+    background-color: #3dc750;
 }
 
 a {
