--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ body {
 }
 
 article {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px 0;
 }
 
 h1 {
@@ -34,18 +33,15 @@ h1 {
 }
 
 h2 {
-    margin-top: 10px;
+    margin: 10px 0;
     font-size: 24px;
 }
 
-.card {
-    margin: 0 auto;
-}
-
 .card-categories {
-    margin-top: 15px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
 }
 
 .card-content {
@@ -70,13 +66,10 @@ a {
     width: 100px;
 }
 
-.categories {
-    margin: 0 auto;
-}
-
 @media (max-width: 720px) {
     .container {
         width: 360px;
+        padding: 16px;
     }
 
     .card-categories {
@@ -84,9 +77,8 @@ a {
     }
 
     .card-content {
-        width: 160px;
-        height: 140px;
-        margin: 10px 8px;
-        padding: 8px;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
     }
 }
