--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald', Helvetica;
     font-size: 20px;
     color: #fdfdfd;
 }
@@ -52,17 +52,24 @@ h2 {
     height: 160px;
     margin: 15px 10px;
     padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-content:hover{
-    background-color: #3dc750;
+    width: 208px;
+    height: 168px;
+    margin: 5px 0;
+    transition: 0.2s;
 }
 
 a {
     text-decoration: none;
 }
 
-.card-img img {
+img {
     width: 100px;
 }
 
@@ -70,6 +77,7 @@ a {
     .container {
         width: 360px;
         padding: 16px;
+        background-color: #54af3d;
     }
 
     .card-categories {
