--- a/style.css
+++ b/style.css
@@ -14,26 +14,27 @@ body {
 }
 
 .container {
-    margin: 0px auto;
-    padding: 40px 50px;
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px 40px 30px;
     background: #458f3252;
     border-right: 2px solid #ccc;
     border-left: 2px solid #ccc;
 }
 
 article {
-    padding: 15px 0;
+    margin: 15px 20px;
 }
 
 h1 {
+    margin: 10px;
     text-align: center;
-    margin-bottom: 10px;
     font-size: 32px;
 }
 
 h2 {
-    margin: 10px 0;
+    margin: 20px;
     font-size: 24px;
 }
 
@@ -73,11 +74,15 @@ img {
     width: 100px;
 }
 
-@media (max-width: 720px) {
+@media screen and (max-width: 738px) {
+    body {
+        background-attachment: scroll;
+    }
+    
     .container {
-        width: 360px;
-        padding: 16px;
-        background-color: #54af3d;
+        padding: 10px 0 0;
+        max-width: 100%;
+        border: none;
     }
 
     .card-categories {
@@ -85,8 +90,15 @@ img {
     }
 
     .card-content {
-        width: 100px;
-        height: 100px;
-        margin: 5px;
+        width: 110px;
+        height: 130px;
+        margin: 5px 5px 10px;
+    }
+
+    .card-content:hover{
+        width: 110px;
+        height: 130px;
+        margin: 5px 5px 10px;
+        transition: none;
     }
 }
