--- a/style.css
+++ b/style.css
@@ -1,104 +1,171 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Oswald', Helvetica;
-    font-size: 20px;
-    color: #fdfdfd;
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", Helvetica;
+  font-size: 20px;
+  color: #fdfdfd;
 }
 
 body {
-    background-color: #3EA433;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%233EA433' width='11' height='11'/%3E%3Crect fill='%2340a535' x='10' width='11' height='11'/%3E%3Crect fill='%2342a736' y='10' width='11' height='11'/%3E%3Crect fill='%2343a838' x='20' width='11' height='11'/%3E%3Crect fill='%2345aa39' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%2347ab3b' y='20' width='11' height='11'/%3E%3Crect fill='%2349ad3d' x='30' width='11' height='11'/%3E%3Crect fill='%234aae3e' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%234cb040' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%234eb141' y='30' width='11' height='11'/%3E%3Crect fill='%2350b343' x='40' width='11' height='11'/%3E%3Crect fill='%2351b445' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%2353b646' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%2355b748' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%2356b949' y='40' width='11' height='11'/%3E%3Crect fill='%2358bb4b' x='50' width='11' height='11'/%3E%3Crect fill='%235abc4d' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%235bbe4e' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%235dbf50' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%235fc151' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%2360c253' y='50' width='11' height='11'/%3E%3Crect fill='%2362c454' x='60' width='11' height='11'/%3E%3Crect fill='%2364c556' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%2365c758' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%2367c859' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%2369ca5b' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%236acb5c' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%236ccd5e' x='70' width='11' height='11'/%3E%3Crect fill='%236ece5f' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%236fd061' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%2371d163' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%2372d364' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%2374d566' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%2376d667' x='80' width='11' height='11'/%3E%3Crect fill='%2377d869' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%2379d96a' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%237bdb6c' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%237cdc6e' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%237ede6f' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%237fdf71' x='90' width='11' height='11'/%3E%3Crect fill='%2381e172' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%2383e374' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%2384e476' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%2386e677' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%2388e779' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%2389e97a' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%238bea7c' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%238cec7e' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%238eee7f' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%2390ef81' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%2391f182' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%2393f284' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%2395f486' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%2396f587' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%2398f789' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%2399f98b' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%239bfa8c' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%239dfc8e' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%239efd8f' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23A0FF91' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
+  background-color: #3ea433;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%233EA433' width='11' height='11'/%3E%3Crect fill='%2340a535' x='10' width='11' height='11'/%3E%3Crect fill='%2342a736' y='10' width='11' height='11'/%3E%3Crect fill='%2343a838' x='20' width='11' height='11'/%3E%3Crect fill='%2345aa39' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%2347ab3b' y='20' width='11' height='11'/%3E%3Crect fill='%2349ad3d' x='30' width='11' height='11'/%3E%3Crect fill='%234aae3e' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%234cb040' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%234eb141' y='30' width='11' height='11'/%3E%3Crect fill='%2350b343' x='40' width='11' height='11'/%3E%3Crect fill='%2351b445' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%2353b646' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%2355b748' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%2356b949' y='40' width='11' height='11'/%3E%3Crect fill='%2358bb4b' x='50' width='11' height='11'/%3E%3Crect fill='%235abc4d' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%235bbe4e' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%235dbf50' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%235fc151' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%2360c253' y='50' width='11' height='11'/%3E%3Crect fill='%2362c454' x='60' width='11' height='11'/%3E%3Crect fill='%2364c556' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%2365c758' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%2367c859' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%2369ca5b' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%236acb5c' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%236ccd5e' x='70' width='11' height='11'/%3E%3Crect fill='%236ece5f' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%236fd061' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%2371d163' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%2372d364' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%2374d566' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%2376d667' x='80' width='11' height='11'/%3E%3Crect fill='%2377d869' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%2379d96a' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%237bdb6c' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%237cdc6e' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%237ede6f' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%237fdf71' x='90' width='11' height='11'/%3E%3Crect fill='%2381e172' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%2383e374' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%2384e476' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%2386e677' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%2388e779' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%2389e97a' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%238bea7c' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%238cec7e' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%238eee7f' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%2390ef81' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%2391f182' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%2393f284' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%2395f486' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%2396f587' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%2398f789' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%2399f98b' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%239bfa8c' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%239dfc8e' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%239efd8f' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23A0FF91' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .container {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px 40px 30px;
-    background: #458f3252;
-    border-right: 2px solid #ccc;
-    border-left: 2px solid #ccc;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px 40px 30px;
+  background: #458f3252;
+  border-right: 2px solid #ccc;
+  border-left: 2px solid #ccc;
 }
 
 article {
-    margin: 15px 20px;
+  margin: 15px 20px;
 }
 
 h1 {
-    margin: 10px;
-    text-align: center;
-    font-size: 32px;
+  margin: 10px;
+  text-align: center;
+  font-size: 32px;
 }
 
 h2 {
-    margin: 20px;
-    font-size: 24px;
+  margin: 20px;
+  font-size: 24px;
 }
 
 .card-categories {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
 }
 
 .card-content {
-    border: 2px solid #ccc;
-    border-radius: 12px;
-    text-align: center;
-    width: 200px;
-    height: 160px;
-    margin: 15px 10px;
-    padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 12px;
+  text-align: center;
+  width: 200px;
+  height: 160px;
+  margin: 15px 10px;
+  padding: 10px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.card-content:hover{
-    width: 208px;
-    height: 168px;
-    margin: 5px 0;
-    transition: 0.2s;
+.card-content:hover {
+  width: 208px;
+  height: 168px;
+  margin: 5px 0;
+  transition: 0.2s;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    width: 100px;
+  width: 100px;
 }
 
 @media screen and (max-width: 738px) {
-    body {
-        background-attachment: scroll;
-    }
-    
-    .container {
-        padding: 10px 0 0;
-        max-width: 100%;
-        border: none;
-    }
+  body {
+    background-attachment: scroll;
+  }
 
-    .card-categories {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .container {
+    padding: 10px 0 0;
+    max-width: 100%;
+    border: none;
+  }
 
-    .card-content {
-        width: 110px;
-        height: 130px;
-        margin: 5px 5px 10px;
-    }
+  .card-categories {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    .card-content:hover{
-        width: 110px;
-        height: 130px;
-        margin: 5px 5px 10px;
-        transition: none;
-    }
+  .card-content {
+    width: 110px;
+    height: 130px;
+    margin: 5px 5px 10px;
+  }
+
+  .card-content:hover {
+    width: 110px;
+    height: 130px;
+    margin: 5px 5px 10px;
+    transition: none;
+  }
+}
+
+/* game.html styles */
+
+.configuration {
+  width: 60px;
+  height: 60px;
+  margin-top: 15px;
+  border-radius: 12px;
+  background: #b8f0b2;
+}
+
+.configuration img {
+  width: 50px;
+  margin: 5px;
+}
+
+.timer {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: 25px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  color: #000;
+  background: #f0f0f0;
+}
+
+.buttons {
+  display: flex;
+}
+
+.btn {
+  display: block;
+  width: 150px;
+  height: 45px;
+  background: #2b8121;
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  margin: 5px auto;
+}
+
+.btn:hover {
+  background: #27771e;
+  cursor: pointer;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #6d7479;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
