--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1 {
 h2 {
   margin: 20px;
   font-size: 24px;
+  font-weight: 200;
 }
 
 .card-categories {
@@ -74,6 +75,97 @@ img {
   width: 100px;
 }
 
+/* game.html styles */
+
+.configuration {
+  width: 60px;
+  height: 60px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 12px;
+  background: #b8f0b2;
+}
+
+.configuration img {
+  width: 50px;
+  margin: 5px;
+}
+
+.category {
+  margin: 0;
+}
+
+.timer {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: 25px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  color: #000;
+  background: #f0f0f0;
+}
+
+.word {
+  text-align: center;
+  font-size: 42px;
+  background-color: #2b8121;
+  width: 200px;
+  border-radius: 10px;
+  margin: 0 auto;
+  font-weight: 500;
+}
+
+.buttons-container {
+  display: flex;
+}
+
+.btn {
+  display: block;
+  width: 150px;
+  height: 45px;
+  background: #2b8121;
+  border-radius: 10px;
+  border: none;
+  text-align: center;
+  margin: 5px auto;
+  font-size: 27px;
+}
+
+.btn:hover {
+  background: #27771e;
+  cursor: pointer;
+}
+
+.d-none {
+  display: none;
+}
+
+/* Loader */
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #6d7479;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Media Queries */
+
 @media screen and (max-width: 738px) {
   body {
     background-attachment: scroll;
@@ -101,71 +193,13 @@ img {
     margin: 5px 5px 10px;
     transition: none;
   }
-}
 
-/* game.html styles */
-
-.configuration {
-  width: 60px;
-  height: 60px;
-  margin-top: 15px;
-  border-radius: 12px;
-  background: #b8f0b2;
-}
-
-.configuration img {
-  width: 50px;
-  margin: 5px;
-}
-
-.timer {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  margin: 25px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 40px;
-  color: #000;
-  background: #f0f0f0;
-}
-
-.buttons {
-  display: flex;
-}
-
-.btn {
-  display: block;
-  width: 150px;
-  height: 45px;
-  background: #2b8121;
-  border-radius: 10px;
-  border: none;
-  text-align: center;
-  margin: 5px auto;
-}
-
-.btn:hover {
-  background: #27771e;
-  cursor: pointer;
-}
-
-.loader {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #6d7479;
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  margin: 0 auto;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
+  .configuration,
+  .category {
+    margin-left: 10px;
   }
-  100% {
-    transform: rotate(360deg);
+
+  .word {
+    font-size: 30px;
   }
 }
